# paygate-client

./: .gitignore  Cargo.toml  LICENSE  PYPI_README.md  README.md  pyproject.toml  rust-toolchain.toml
.github/actions/aggregate-rust-platform/: action.yml
.github/actions/aggregate-rust-qualification/: action.yml
.github/workflows/: ci.yml  publish.yml  rust-integration-qualification.yml  rust-payment-canary.yml  rust-platform.yml  rust-qualification.yml  rust-wave5-acceptance.yml
.orchestrate/: close-wave5-critical-gaps-d18f0a7f.json  complete-wave-2-canary-qualification-eb358f09.json  correct-wave-2-acceptance-gaps-66890fd0.json  remediate-wave-5-qualification-gaps-40292a0.json  remediate-wave-5-qualification-gaps-40292a0ecbcd6ad8e1872ea765ffab7f0452cef9b925a2b9c6366fd3c366b53a.json  rust-cutover-14e6d251.json  rust-cutover-14e6d2519d6554cc25070f6401bc8ba54901b2466016ec2282dfb555306c819c.json
compat/: __init__.py  manifest.yaml
compat/fixtures/: backends.json  baseline_inventory.json  cli-contract.json  cli-help.txt  controls.json  keyring.json
compat/python_oracle/: Dockerfile  README.md  __init__.py  bootstrap.in  intentional-differences.json  inventory.py  oracle.py  probes.py  replay.py  requirements.in  wheelhouse-manifest.json  wheelhouse.py
compat/python_oracle/golden/: evidence.json
compat/python_oracle/inject/: oracle_pytest.py  sitecustomize.py
compat/python_oracle/tests/: test_oracle_contract.py
compat/python_oracle/wheelhouse/: jaraco_functools-4.6.0-py3-none-any.whl  pastel-0.2.1-py2.py3-none-any.whl  poethepoet-0.37.0-py3-none-any.whl  types_pyyaml-6.0.12.20250915-py3-none-any.whl
docs/: dev-setup.md  payer-backend-compatibility.md  phoenixd-spike.md  platform-qualification.md  releasing.md  wave5-evidence-publication.md
examples/: paygate-client.yaml
infra/payment-canary-runner/: README.md  payment_canary_runner.py
infra/runners/: payment-canary-github-audit.json  payment-canary.yml  platform-qualification.yml
paygate_client/: __init__.py  challenges.py  cli.py  config.py  credentials.py  diagnostics.py  http.py  invoices.py  ledger.py  orchestrator.py  policy.py  redaction.py  session_cache.py  trace.py
paygate_client/payers/: __init__.py  base.py  breez.py  lnd_rest.py  phoenixd.py  test_mode.py
plans/: bind-validated-bolt11-amount-and-payment-hash-to-every-policy-approved-payment-before-wallet-submission.md  breez-spark-payer-backend.md  breez-spark-paygate-findings.md  close-wave5-critical-gaps.md  complete-wave-2-canary-qualification.md  correct-wave-2-acceptance-gaps.md  enable-validated-bolt11-decoding-via-rust-cutover.md  initial-plan.md  paygate-client-v1.md  public-release-and-repository-polish.md  remediate-wave-5-qualification-gaps.md  rust-cutover.md  security-review-remediation.md  voltage-node-setup.md
plans/decisions/: bolt11-decoder.md  python-oracle-transition-boundary.md  rust-cutover-dependencies.md
plans/voltage-payer-node/: v1-plan.md
reports/: greenharbor-code-review-full-2026-07-17.md  rust-qualification.md
scripts/: bootstrap-native-keyring.py  breez-connect-check.py  breez-create-invoice.py  breez-payment-history.py  breez-payment-history.sh  breez-preimage-doctor.py  check-breez-wallet.sh  check-dist.sh  check-oracle-semantic-contract.py  check-rust-advisories.py  check-rust-canary-contract.py  check-rust-canary-result.py  check-rust-licenses.py  check-rust-linkage.py  check-rust-qualification-report.py  check-rust-wave5-candidate.py  extract-python-semantic-evidence.py  setup-voltage-paygate.sh  typecheck.sh
security/: advisory-snapshot.json  payment-canary-composite-digest-profile-v1.json  payment-canary-composite-digest-vectors.json  payment-canary-contract.yaml
security/payment-canary-trust/: infrastructure-keyring.json  infrastructure-v1.pub  ledger-keyring.json  ledger-v1.pub  result-keyring.json  runner-v1.pub
src/: challenge.rs  cli.rs  config.rs  credentials.rs  diagnostics.rs  error.rs  http.rs  invoice.rs  lib.rs  main.rs  orchestrator.rs  policy.rs  redaction.rs  serialization.rs  trace.rs
src/payers/: base.rs  breez.rs  lnd_rest.rs  mod.rs  phoenixd.rs  test_mode.rs
src/state/: cache.rs  keyring.rs  ledger.rs  mod.rs
tests/: __init__.py  breez_lifecycle_qualification.rs  breez_sdk_contract.rs  dependency_qualification.rs  fuzz_smoke.rs  interface_contract.rs  keyring_qualification.rs  oracle_semantic_bridge.rs  test_challenges.py  test_cli.py  test_cli_smoke.py  test_config.py  test_credentials.py  test_diagnostics.py  test_invoices.py  test_ledger.py  test_orchestrator.py  test_package_metadata.py  test_payers_breez.py  test_payers_lnd_rest.py  test_payers_phoenixd.py  test_payers_test_mode.py  test_paygate_fixtures.py  test_payment_canary_runner.py  test_payment_canary_verifier_conformance.py  test_policy.py  test_redaction.py  test_session_cache.py  wave3_cli_state.rs  wave3_payment_domain.rs  wave4_payer_adapters.rs
tests/fixtures/paygate/: dual_challenge.json  l402_challenge.json  mpp_challenge.json  mpp_credential.json
tests/platform-smoke/: test_platform_qualification_scaffold.py  test_rust_development_gate.py  test_rust_qualification_evidence.py  test_wave5_qualification_contracts.py
tests/platform-smoke/stub/: Cargo.toml
tests/platform-smoke/stub/src/: main.rs
tests/platform-smoke/stub/tests/: cli.rs
