[package]
name = "paygate-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Command-line client for Paygate"
repository = "https://github.com/greenharborlabs/paygate-client"

[lib]
name = "paygate"
path = "src/lib.rs"

[[bin]]
name = "paygate"
path = "src/main.rs"

[features]
default = []
breez-qualification = ["dep:breez-sdk-spark"]

[dependencies]
async-trait = "=0.1.88"
bech32 = "=0.11.1"
clap = { version = "=4.5.40", features = ["derive"] }
fs4 = "=1.1.0"
hex = "=0.4.3"
keyring = "=4.1.5"
libc = "=0.2.186"
lightning-invoice = { version = "=0.34.1", features = ["std"] }
reqwest = { version = "=0.12.23", default-features = false, features = ["http2", "json", "rustls-tls", "system-proxy"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde-saphyr = { version = "=0.0.29", default-features = false, features = ["deserialize"] }
sha2 = "=0.10.9"
thiserror = "=2.0.12"
tokio = { version = "=1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
breez-sdk-spark = { git = "https://github.com/breez/spark-sdk.git", rev = "f660f5a3bf24323e5c14235efcd28e5aef06c8aa", package = "breez-sdk-spark", default-features = false, features = ["sqlite"], optional = true }

[dev-dependencies]
async-trait = "=0.1.88"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
