[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paygate-client"
dynamic = ["version"]
description = "Command-line client for Paygate."
readme = {file = "PYPI_README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Green Harbor Labs", email = "mark@greenharborlabs.com"},
]
maintainers = [
    {name = "Green Harbor Labs", email = "mark@greenharborlabs.com"},
]
keywords = ["402", "agent", "cli", "lightning", "paygate", "payment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "keyring>=25,<26",
    "PyYAML>=6.0,<7",
    "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/greenharborlabs/paygate-client"
Source = "https://github.com/greenharborlabs/paygate-client"
Issues = "https://github.com/greenharborlabs/paygate-client/issues"
Documentation = "https://github.com/greenharborlabs/paygate-client/tree/main/docs"

[project.scripts]
paygate = "paygate_client.cli:app"

[project.optional-dependencies]
breez = [
    "breez-sdk-spark>=0.17.1,<0.18",
]
dev = [
    "build>=1,<2",
    "mypy>=1.10,<2",
    "poethepoet>=0.27,<1",
    "pytest>=8.2,<9",
    "types-PyYAML>=6.0.12,<7",
    "ruff>=0.5,<1",
    "setuptools>=77.0.3",
    "tomli>=2,<3; python_version < '3.11'",
    "wheel>=0.45,<1",
]

[tool.setuptools.packages.find]
include = ["paygate_client*"]

[tool.setuptools.dynamic]
version = {attr = "paygate_client.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check ."
test = "pytest"
typecheck = "mypy"
fix = { shell = "ruff check . --fix && ruff format ." }
check = { shell = "ruff format --check . && ruff check . && mypy && pytest" }

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"paygate_client/cli.py" = ["B008", "UP006", "UP035", "UP045"]

[tool.mypy]
python_version = "3.10"
packages = ["paygate_client"]
strict = true

[[tool.mypy.overrides]]
module = "breez_sdk_spark"
ignore_missing_imports = true
